--- a/3dparty/unzip/INSTALL.vcxproj.filters
+++ b/3dparty/unzip/INSTALL.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="Windows-1252"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <CustomBuild Include="D:\projects\osre\CMakeFiles\656e274b8d6efb0381563fe8cad083ce\INSTALL_force.rule">
