--- a/3dparty/glew/INSTALL.vcxproj.filters
+++ b/3dparty/glew/INSTALL.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="Windows-1252"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <CustomBuild Include="D:\projects\osre\CMakeFiles\a86373d866f276e9b88eb7655e584c8b\INSTALL_force.rule">
