--- a/3dparty/soil/INSTALL.vcxproj.filters
+++ b/3dparty/soil/INSTALL.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="Windows-1252"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <CustomBuild Include="D:\projects\osre\CMakeFiles\bb8c6188f348ccaa40f3d2e9231e02e9\INSTALL_force.rule">
