--- a/3dparty/zlib/ALL_BUILD.vcxproj
+++ b/3dparty/zlib/ALL_BUILD.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="Windows-1252"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -66,7 +66,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Midl>
       <AdditionalIncludeDirectories>D:\projects\osre\include;D:\projects\osre\3dparty\glew\include;d:\projects\libs\sdl2\SDL2-2.0.3\include;c:\Users\kullingk\Desktop\projects\libs\SDL2-2.0.3\include;D:\projects\osre\3dparty\soil\src;\usr\include\SDL2;\usr\include;D:\projects\osre\3dparty\zlib;D:\projects\osre;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <OutputDirectory>$(IntDir)</OutputDirectory>
+      <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
       <InterfaceIdentifierFileName>%(Filename)_i.c</InterfaceIdentifierFileName>
@@ -76,7 +76,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Midl>
       <AdditionalIncludeDirectories>D:\projects\osre\include;D:\projects\osre\3dparty\glew\include;d:\projects\libs\sdl2\SDL2-2.0.3\include;c:\Users\kullingk\Desktop\projects\libs\SDL2-2.0.3\include;D:\projects\osre\3dparty\soil\src;\usr\include\SDL2;\usr\include;D:\projects\osre\3dparty\zlib;D:\projects\osre;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <OutputDirectory>$(IntDir)</OutputDirectory>
+      <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
       <InterfaceIdentifierFileName>%(Filename)_i.c</InterfaceIdentifierFileName>
@@ -86,7 +86,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">
     <Midl>
       <AdditionalIncludeDirectories>D:\projects\osre\include;D:\projects\osre\3dparty\glew\include;d:\projects\libs\sdl2\SDL2-2.0.3\include;c:\Users\kullingk\Desktop\projects\libs\SDL2-2.0.3\include;D:\projects\osre\3dparty\soil\src;\usr\include\SDL2;\usr\include;D:\projects\osre\3dparty\zlib;D:\projects\osre;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <OutputDirectory>$(IntDir)</OutputDirectory>
+      <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
       <InterfaceIdentifierFileName>%(Filename)_i.c</InterfaceIdentifierFileName>
@@ -96,7 +96,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">
     <Midl>
       <AdditionalIncludeDirectories>D:\projects\osre\include;D:\projects\osre\3dparty\glew\include;d:\projects\libs\sdl2\SDL2-2.0.3\include;c:\Users\kullingk\Desktop\projects\libs\SDL2-2.0.3\include;D:\projects\osre\3dparty\soil\src;\usr\include\SDL2;\usr\include;D:\projects\osre\3dparty\zlib;D:\projects\osre;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <OutputDirectory>$(IntDir)</OutputDirectory>
+      <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
       <InterfaceIdentifierFileName>%(Filename)_i.c</InterfaceIdentifierFileName>
@@ -115,7 +115,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</LinkObjects>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Building Custom Rule D:/projects/osre/3dparty/zlib/CMakeLists.txt</Message>
@@ -128,7 +128,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkObjects>
       <Message Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">Building Custom Rule D:/projects/osre/3dparty/zlib/CMakeLists.txt</Message>
@@ -141,7 +141,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">false</LinkObjects>
       <Message Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">Building Custom Rule D:/projects/osre/3dparty/zlib/CMakeLists.txt</Message>
@@ -154,7 +154,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.1\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">D:/projects/osre/3dparty/zlib/CMakeLists.txt;D:\projects\osre\3dparty\zlib\CMakeLists.txt;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckTypeSize.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFileCXX.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckFunctionExists.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckIncludeFile.cmake;C:\Program Files (x86)\CMake\share\cmake-3.3\Modules\CheckCSourceCompiles.cmake;D:\projects\osre\3dparty\zlib\zlib.pc.cmakein;D:\projects\osre\3dparty\zlib\zconf.h.cmakein;D:\projects\osre\3dparty\zlib\CMakeLists.txt;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">D:\projects\osre\3dparty\zlib\CMakeFiles\generate.stamp</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">false</LinkObjects>
     </CustomBuild>
