--- a/test/RenderTests/INSTALL.vcxproj.filters
+++ b/test/RenderTests/INSTALL.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="Windows-1252"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <CustomBuild Include="D:\projects\osre\CMakeFiles\3642fb055e5767719b18891e9dd3ade6\INSTALL_force.rule">
