Debugging: add source file for assertion handler.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,6 +71,10 @@ SET( debugging_inc
     ${HEADER_PATH}/Debugging/osre_debugging.h
 )
 
+SET( debugging_src
+    Debugging/AssertHandler.cpp
+)
+
 #==============================================================================
 # IO
 #==============================================================================
